src/liquid_parquet/src/tests/snapshots/liquid_cache_parquet__tests__provide_schema_with_filter.snap
---
source: src/liquid_parquet/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\", plan, reference)"
---
plan: 
┌───────────────────────────┐
│       SortExec(TopK)      │
│    --------------------   │
│       WatchID@0 DESC      │
│                           │
│         limit: 10         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+---------------------+----+------------+
| WatchID             | OS | EventTime  |
+---------------------+----+------------+
| 9223293557789499343 | 44 | 1373872327 |
| 9223247512111991176 | 44 | 1373911908 |
| 9223229607482000671 | 77 | 1373833003 |
| 9223164623569128382 | 2  | 1373879513 |
| 9223117509516371378 | 2  | 1373876061 |
| 9222952846921702972 | 44 | 1373889267 |
| 9222910629637340291 | 77 | 1373836473 |
| 9222583454246564335 | 2  | 1373914422 |
| 9222450121739726704 | 44 | 1373913677 |
| 9222423940302739840 | 2  | 1373887146 |
+---------------------+----+------------+
