src/liquid_parquet/src/tests/snapshots/liquid_cache_parquet__tests__single_column_filter_projection.snap
---
source: src/liquid_parquet/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\", plan, reference)"
---
plan: 
┌───────────────────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+---------------------+
| WatchID             |
+---------------------+
| 6978470580070504163 |
+---------------------+
